# marey

./: .gitignore  .ninja_log  CMakeLists.txt  LICENSE  Makefile  README.md  build.ninja  kernel.elf
Source/Kernel/: main.cpp
cmake/: stdset.cmake
include/marey/Core/: CoreModule.h  CrtpBase.h  Kernel.h  Module.h  ModuleBase.h  ModuleManager.h
include/marey/Io/: IoManager.h
include/marey/LowLevel/: Booting.h  Io.h
include/marey/Settings/: Defintions.h
iso/boot/: kernel  kernel.elf
iso/boot/grub/: grub.cfg
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt  CoreModule.cpp  Kernel.cpp
lib/Io/: CMakeLists.txt  IoManager.Kernel.cpp  IoManager.Tester.cpp
lib/LowLevel/: CMakeLists.txt  Io.cpp
main/: CMakeLists.txt  main.cpp
main/booter/: CMakeLists.txt  build.ninja
main/kernel/: CMakeLists.txt  build.ninja  linker.ld
main/tester/: CMakeLists.txt  main.tester.cpp
